[package]
authors = ['Joshua Gilman <joshuagilman@gmail.com>']
description = 'An asynchronous Rust client library for the Hashicorp Consul API.'
edition = '2018'
keywords = ['Consul', 'API', 'Client', 'Hashicorp']
license = 'MIT'
name = 'consulrs'
readme = 'README.md'
repository = 'https://github.com/jmgilman/consulrs'
version = '0.1.0'

[dependencies]
async-trait = '0.1'
base64 = '0.13'
derive_builder = '0.11'
http = '0.2'
rustify = '0.5'
rustify_derive = '0.5'
serde = '1'
serde_json = '1'
serde_with = '2'
thiserror = '1'
tracing = '0.1'
url = '2'
[dependencies.consulrs_derive]
path = 'consulrs_derive'
version = '0.1.0'

[dependencies.reqwest]
default-features = false
features = ['rustls-tls']
version = '0.11.4'


